# cs_merge

./: README.md  params.yaml
bagfiles/: 2015-03-17-11-08-06.bag  subset.bag
cs_merge/: CMakeLists.txt  cs_merge.launch  cs_merge.xml  package.xml
cs_merge/cs_merge_controller/: CMakeLists.txt  CMakeLists.txt~
cs_merge/cs_merge_controller/src/: cs_merge_controller.cpp
cs_merge/cs_merge_methods/: CMakeLists.txt  CMakeLists.txt~  package.xml
cs_merge/cs_merge_methods/launch/: methods.launch  methods.launch~
cs_merge/cs_merge_methods/src/: cs_merge_hough_ccr.cpp  cs_merge_hough_corner.cpp  cs_merge_icp_gradient.cpp
cs_merge/cs_merge_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
cs_merge/cs_merge_msgs/srv/: getTransform.srv  getTransform.srv~
cs_merge/cs_merge_publisher/: CMakeLists.txt
cs_merge_controller/: CMakeLists.txt  package.xml
cs_merge_controller/src/: cs_merge_controller.cpp
cs_merge_methods/src/: cs_merge_hough_ccr.cpp  cs_merge_hough_corner.cpp  cs_merge_icp_svd.cpp
cs_merge_msgs/src/cs_merge_msgs/srv/: _getTransform.py
cs_merge_publisher/: CMakeLists.txt  package.xml
devel/: .catkin  .rosinstall  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/cs_merge_msgs/: getTransform.h  getTransformRequest.h  getTransformResponse.h  getWorld.h  getWorldRequest.h  getWorldResponse.h
devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
devel/lib/cs_merge_controller/: cs_merge_controller
devel/lib/cs_merge_methods/: cs_merge_hough_ccr  cs_merge_hough_corner  cs_merge_icp_gradient  cs_merge_icp_svd
devel/lib/cs_merge_publisher/: cs_merge_publisher
devel/lib/pkgconfig/: beginner_tutorials.pc  clock.pc  cs_merge_controller.pc  cs_merge_methods.pc  cs_merge_msgs.pc  cs_merge_publisher.pc  foobar.pc  hector_driving_aid_markers.pc  hector_elevation_msgs.pc
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/clock/cmake/: clockConfig.cmake
devel/share/cs_merge_controller/cmake/: cs_merge_controllerConfig.cmake
devel/share/cs_merge_methods/cmake/: cs_merge_methodsConfig.cmake  (+1 more)
(+12 files in other folders)
