<?xml version="1.0"?>
<package>
  <name>cs_merge_methods</name>
  <version>0.0.0</version>
  <description>

     cs_methods provides merging algorithms

  </description>

  <maintainer email="christian.scheiderer@gmail.com">Christian Scheiderer</maintainer>
  <license>MIT</license>
  <url>http://ros.org/wiki/cs_merge/cs_merge_methods</url>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cs_merge_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cs_merge_msgs</run_depend>

</package>
